erDiagram
    confederacion {
        INT confederacion_id PK
        VARCHAR nombre
        uq_confederacion_nombre CONSTRAINT
    }
    seleccion {
        INT seleccion_id PK
        INT pais_id
        INT confederacion_id
        CHAR grupo
        uq_seleccion_pais CONSTRAINT
    }
    partido {
        INT partido_id PK
        INT sede_id
        DATETIMEOFFSET fecha_hora_local
        DATETIMEOFFSET fecha_hora_utc
        VARCHAR fase
        INT seleccion_local_id
        INT seleccion_visitante_id
        VARCHAR estado
        INT goles_local
        INT goles_visitante
        INT penales_local
        INT penales_visitante
        INT asistencia_publico
        uq_partido_cruce CONSTRAINT
        chk_partido_estado CONSTRAINT
        chk_partido_rivales CONSTRAINT
        chk_partido_goles CONSTRAINT
        chk_partido_penales CONSTRAINT
        chk_partido_asistencia CONSTRAINT
    }
    jugador {
        INT jugador_id PK
        VARCHAR nombre
        VARCHAR apellido
        DATE fecha_nacimiento
        VARCHAR club_origen
        VARCHAR posicion_habitual
    }
    convocatoria {
        INT convocatoria_id PK
        INT seleccion_id
        INT jugador_id
        INT dorsal
        DATE fecha_alta
        VARCHAR motivo_alta
        DATE fecha_baja
        VARCHAR motivo_baja
        chk_convocatoria_dorsal CONSTRAINT
        chk_convocatoria_fechas CONSTRAINT
    }
    formacion_jugador {
        INT formacion_id PK
        INT jugador_id PK
        INT dorsal
        VARCHAR posicion
        BIT titular
        chk_formacion_jugador_dorsal CONSTRAINT
    }
    criterio_suspension {
        INT criterio_id PK
        VARCHAR fase_aplicable
        INT cantidad_amarillas
        INT partidos_suspension
        BIT activo
        uq_criterio_suspension CONSTRAINT
        chk_criterio_amarillas CONSTRAINT
        chk_criterio_partidos CONSTRAINT
    }
    suspension {
        INT suspension_id PK
        INT jugador_id
        INT criterio_id
        INT tarjeta_id
        INT partido_afectado_id
        VARCHAR motivo
        DATETIMEOFFSET fecha_generada
    }
    arbitro_idioma {
        INT arbitro_id PK
        VARCHAR idioma PK
    }
    designacion_arbitral {
        INT designacion_id PK
        INT partido_id
        INT arbitro_id
        VARCHAR rol
        uq_designacion_arbitral_rol CONSTRAINT
        uq_designacion_arbitral_arbitro CONSTRAINT
    }
    informe_arbitral {
        INT informe_id PK
        INT designacion_id
        DATETIMEOFFSET fecha
        VARCHAR contenido
        VARCHAR sancion
    }
    campania {
        INT campania_id PK
        INT anunciante_id
        VARCHAR nombre
        DATE fecha_inicio
        DATE fecha_fin
        chk_campania_fecha CONSTRAINT
        uq_campania_nombre_anunciante CONSTRAINT
    }
    campania_pais_interes {
        INT campania_id PK
        INT pais_id PK
    }
    pieza_publicitaria {
        INT pieza_id PK
        INT campania_id
        VARCHAR idioma
        INT pais_mercado_id
        NUMERIC costo_tarifa
        uq_pieza_publicitaria CONSTRAINT
        chk_pieza_costo CONSTRAINT
    }
    espacio_publicitario {
        INT espacio_id PK
        INT partido_id
        INT numero_espacio
        INT pieza_id
        INT orden_prioridad
        DATETIMEOFFSET fecha_exhibicion
        BIT facturado
        NUMERIC monto_facturado
        uq_espacio_publicitario CONSTRAINT
        chk_espacio_numero CONSTRAINT
        chk_espacio_monto CONSTRAINT
    }

    seleccion }|--|| pais : "pais_id -> pais_id"
    seleccion }|--|| confederacion : "confederacion_id -> confederacion_id"
    partido }|--|| sede : "sede_id -> sede_id"
    partido }|--|| seleccion : "seleccion_local_id -> seleccion_id"
    partido }|--|| seleccion : "seleccion_visitante_id -> seleccion_id"
    convocatoria }|--|| seleccion : "seleccion_id -> seleccion_id"
    convocatoria }|--|| jugador : "jugador_id -> jugador_id"
    formacion_jugador }|--|| formacion : "formacion_id -> formacion_id"
    formacion_jugador }|--|| jugador : "jugador_id -> jugador_id"
    suspension }|--|| jugador : "jugador_id -> jugador_id"
    suspension }|--|| criterio_suspension : "criterio_id -> criterio_id"
    suspension }|--|| tarjeta : "tarjeta_id -> tarjeta_id"
    suspension }|--|| partido : "partido_afectado_id -> partido_id"
    arbitro_idioma }|--|| arbitro : "arbitro_id -> arbitro_id"
    designacion_arbitral }|--|| partido : "partido_id -> partido_id"
    designacion_arbitral }|--|| arbitro : "arbitro_id -> arbitro_id"
    informe_arbitral }|--|| designacion_arbitral : "designacion_id -> designacion_id"
    campania }|--|| anunciante : "anunciante_id -> anunciante_id"
    campania_pais_interes }|--|| campania : "campania_id -> campania_id"
    campania_pais_interes }|--|| pais : "pais_id -> pais_id"
    pieza_publicitaria }|--|| campania : "campania_id -> campania_id"
    pieza_publicitaria }|--|| pais : "pais_mercado_id -> pais_id"
    espacio_publicitario }|--|| partido : "partido_id -> partido_id"
    espacio_publicitario }|--|| pieza_publicitaria : "pieza_id -> pieza_id"

